ingress/ingress-nip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nip
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: default
spec:
  rules:
    - host: internal.3.8.160.83.nip.io
      http:
        paths:
          - backend:
              service:
                name: web-two
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: external.3.8.160.83.nip.io
      http:
        paths:
          - backend:
              service:
                name: web-one
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
status:
  loadBalancer: {}
